--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -49,7 +49,17 @@ spring:
     # 配置监控统计拦截的filters，去掉后监控界面sql无法统计，'wall'用于防火墙
     filters: stat,wall,log4j
     logSlowSql: true
-
+  # rabbitmq:
+   # host: 120.79.37.222
+   # port: 5672
+   # username: guest
+   # password: qq123456
+  redis:
+    database: 0
+    host: 120.79.37.222
+    port: 6379
+    password:
+      
 
 #logback配置文件
 logging:
